Use restaurant ID when creating an item
