# internal/pkg/server/item.go
@@ -5,7 +5,6 @@ import (
 	"errors"
 	"io/ioutil"
 	"net/http"
-	"time"
 
 	"github.com/jinzhu/gorm"
 	"github.com/julienschmidt/httprouter"
@@ -40,43 +39,18 @@ func (s *Server) listItems(w http.ResponseWriter, r *http.Request, p httprouter.
 }
 
 func (s *Server) postItem(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
-    type new struct {
-        Title       string
-        Restaurant  string
-        Description string
-        Review      string
-        Date        time.Time
-    }
-
     b, err := ioutil.ReadAll(r.Body)
     if err != nil {
         Error(w, err, http.StatusBadRequest)
         return
     }
 
-    var n new
-    err = json.Unmarshal(b, &n)
+    var i db.Item
+    err = json.Unmarshal(b, &i)
     if err != nil {
         Error(w, err, http.StatusUnprocessableEntity)
         return
     }
-
-    restaurant, err := db.GetRestaurant(n.Restaurant)
-    if err == gorm.ErrRecordNotFound {
-        Error(w, err, http.StatusNotFound)
-        return
-    }
-    if err != nil {
-        Error(w, err, http.StatusInternalServerError)
-        return
-    }
-
-    var i db.Item
-    i.RestaurantID = restaurant.ID
-    i.Title = n.Title
-    i.Description = n.Description
-    i.Review = n.Review
-    i.Date = n.Date
 
     err = db.PostItem(&i)
     if err != nil {
